<resources>
    <string name="app_name">DuanOne</string>
    <string name="home_page">首页</string>
    <string name="find_show">发现</string>
    <string name="audit">审核</string>
    <string name="contributes">投稿</string>
    <string name="feedback">反馈</string>
    <string name="collect">收藏</string>
    <string name="comment">评论</string>
    <string name="hotspot">热吧</string>
    <string name="subscription">订阅</string>
    <string name="message">消息</string>
    <string name="essence">精选</string>
    <string name="attention">关注</string>
    <string name="fan">粉丝</string>
    <string name="integral">积分</string>
    <string name="remove">移除</string>
    <string name="clear">清空</string>
    <string name="blacklist">黑名单</string>
    <string name="contribute">投稿互动</string>
    <string name="system">系统消息</string>
    <string name="fans">粉丝关注</string>
    <string name="date">约起来吧</string>
    <string name="unknown">未知星球</string>
    <string name="pillow">去TA的主页就可以发悄悄话哦！</string>
    <string name="youHaveIsDigg">你已经顶过</string>
    <string name="youHaveIsBury">你已经踩过</string>

    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_loading">正在加载...</string>
    <string name="nomore_loading">没有了</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成</string>
    <string name="listview_header_last_time">上次更新时间：</string>

    <!--footer-->
    <string name="list_footer_loading">正在加载中…</string>
    <string name="list_footer_network_error">点击重新加载</string>
    <string name="list_footer_end">已全部加载完</string>

    <string name="text_just">刚刚</string>
    <string name="text_seconds_ago">秒前</string>
    <string name="text_minute_ago">分钟前</string>
    <string name="text_hour_ago">小时前</string>
    <string name="text_day_ago">天前</string>
    <string name="text_month_ago">月前</string>
    <string name="text_year_ago">年前</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
