<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_tab_bg"
    >


    <RelativeLayout
        android:id="@+id/message_contribute_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        >

        <ImageView
            android:id="@+id/message_image_contribute"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/ic_tab_message_header_ugc"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/message_image_contribute"
            android:text="@string/contribute"
            android:textSize="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_arrow"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_tab_bg"
        />

    <RelativeLayout
        android:id="@+id/message_collect_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        >

        <ImageView
        android:id="@+id/message_image_system"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="@drawable/ic_tab_message_header_system"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/message_image_system"
            android:text="@string/system"
            android:textSize="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_arrow"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_tab_bg"
        />

    <RelativeLayout
        android:id="@+id/message_comment_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        >

        <ImageView
            android:id="@+id/message_image_fans"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/ic_tab_message_header_fans"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/message_image_fans"
            android:text="@string/fans"
            android:textSize="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_arrow"
            />
    </RelativeLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_tab_message_header_empty"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pillow"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        />

</LinearLayout>