<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.PersonalFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:background="@color/personal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/personal_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="7dp"
                android:background="@drawable/large_loading"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/ic_profile_location"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_above="@+id/personal_linear1"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="15dp"
                >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="4dp"
                    android:background="@drawable/ic_profile_feedback" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contributes"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="15dp"
                >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="3dp"
                    android:background="@drawable/ic_profile_publish" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/personal_linear1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contributes"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="0"
                    android:textColor="@color/golden" />
            </LinearLayout>
            <!--<com.one.duanone.view.DoubleTextView-->
                <!--android:layout_width="100dp"-->
                <!--app:text1="asdsd"-->
                <!--android:layout_height="match_parent"-->
                <!--app:text2="2313"-->
                <!--/>-->

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fan"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="0"
                    android:textColor="@color/golden" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/integral"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="0"
                    android:textColor="@color/golden" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/personal_textview"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="这个人很懒,什么也没有留下"
                android:textSize="17dp" />

            <LinearLayout
                android:id="@+id/personal_linear"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/personal_textview"
                android:orientation="horizontal">

                <TextView
                    style="@style/HorizontalTextViewStyle"
                    android:text="@string/contributes" />

                <TextView
                    style="@style/HorizontalTextViewStyle"
                    android:text="@string/collect" />

                <TextView
                    style="@style/HorizontalTextViewStyle"
                    android:text="@string/comment" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/personal_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/personal_linear"
                android:background="@color/gray_1">

            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/personal_linear"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/ic_no_publish" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="不会发段子的土豪不是好逗逼" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
